--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"mongodb": "^4.12.1",
+		"multer": "^1.4.5-lts.1"
 	},
 	"devDependencies": {
+		"dotenv": "^16.0.3",
 		"nodemon": "^2.0.20"
 	}
 }
